@@ -12,6 +12,7 @@ exempt of errors.
 - Arno Willig
 - Bob Ciora
 - Chaos
+- Charles Nepveu (cnepveu)
 - Chris Pickel
 - Craig Nelson
 - David Maass
